# Sorting-utility

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/: file_reader.h  sortings.h
scripts/: build.sh
src/: file_reader.c  sort_strings.c  sortings.c
tests/input/: big.txt  same.txt  test1.txt
